--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ class test
 		int n1,n2,n3,n4;
 		Scanner in=new Scanner(System.in);
 		System.out.println("Enter four number for tables   ");
+		System.out.println("dont worry its ok");
 		n1=in.nextInt();
 		n2=in.nextInt();
 		n3=in.nextInt();
